# resources/views/admin/pages/form/user/result.blade.php
@@ -1,0 +1,256 @@
+@extends('admin.layouts.master')
+
+@section('title','Forms')
+
+@section('css')
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <style>
+        .wizard {
+            margin: 20px auto;
+            background: {{$form->bg_color}};
+        }
+
+        .wizard .nav-tabs {
+            position: relative;
+            margin: 40px auto;
+            margin-bottom: 0;
+            border-bottom-color: #e0e0e0;
+        }
+
+        .wizard > div.wizard-inner {
+            position: relative;
+        }
+
+        .connecting-line {
+            height: 2px;
+            background: #e0e0e0;
+            position: absolute;
+            width: 80%;
+            margin: 0 auto;
+            left: 0;
+            right: 0;
+            top: 50%;
+            z-index: 1;
+        }
+
+        .wizard .nav-tabs > li.active > a, .wizard .nav-tabs > li.active > a:hover, .wizard .nav-tabs > li.active > a:focus {
+            color: #555555;
+            cursor: default;
+            border: 0;
+            border-bottom-color: transparent;
+        }
+
+        span.round-tab {
+            width: 70px;
+            height: 70px;
+            line-height: 70px;
+            display: inline-block;
+            border-radius: 100px;
+            background: #fff;
+            border: 2px solid #e0e0e0;
+            z-index: 2;
+            position: absolute;
+            left: 0;
+            text-align: center;
+            font-size: 25px;
+        }
+        span.round-tab i{
+            color:#555555;
+        }
+        .wizard li.active span.round-tab {
+            background: #fff;
+            border: 2px solid #5bc0de;
+
+        }
+        .wizard li.active span.round-tab i{
+            color: #5bc0de;
+        }
+
+        span.round-tab:hover {
+            color: #333;
+            border: 2px solid #333;
+        }
+
+        .wizard .nav-tabs > li {
+            width: 25%;
+        }
+
+        .wizard li:after {
+            content: " ";
+            position: absolute;
+            left: 46%;
+            opacity: 0;
+            margin: 0 auto;
+            bottom: 0px;
+            border: 5px solid transparent;
+            border-bottom-color: #5bc0de;
+            transition: 0.1s ease-in-out;
+        }
+
+        .wizard li.active:after {
+            content: " ";
+            position: absolute;
+            left: 46%;
+            opacity: 1;
+            margin: 0 auto;
+            bottom: 0px;
+            border: 10px solid transparent;
+            border-bottom-color: #5bc0de;
+        }
+
+        .wizard .nav-tabs > li a {
+            width: 70px;
+            height: 70px;
+            margin: 20px auto;
+            border-radius: 100%;
+            padding: 0;
+        }
+
+        .wizard .nav-tabs > li a:hover {
+            background: transparent;
+        }
+
+        .wizard .tab-pane {
+            position: relative;
+            padding-top: 50px;
+        }
+
+        .wizard h3 {
+            margin-top: 0;
+        }
+
+        @media( max-width : 585px ) {
+
+            .wizard {
+                width: 90%;
+                height: auto !important;
+            }
+
+            span.round-tab {
+                font-size: 16px;
+                width: 50px;
+                height: 50px;
+                line-height: 50px;
+            }
+
+            .wizard .nav-tabs > li a {
+                width: 50px;
+                height: 50px;
+                line-height: 50px;
+            }
+
+            .wizard li.active:after {
+                content: " ";
+                position: absolute;
+                left: 35%;
+            }
+        }
+    </style>
+@endsection
+
+@section('content')
+    <div class="main-content">
+        <!-- Breadcrumb -->
+        <ol class="breadcrumb breadcrumb-2">
+            <li><a href="{{route('admin.home')}}"><i class="fa fa-home"></i>Home</a></li>
+            <li class="active"><strong>Forms</strong></li>
+        </ol>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading clearfix">
+                        <ul class="panel-tool-options">
+                            <li><a data-rel="collapse" href="#"><i class="icon-down-open"></i></a></li>
+                            <li><a data-rel="reload" href="#"><i class="icon-arrows-ccw"></i></a></li>
+                            <li><a data-rel="close" href="#"><i class="icon-cancel"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="panel-body">
+                        <div class="wizard">
+                            <div class="wizard-inner">
+                                <div class="connecting-line"></div>
+                                <ul class="nav nav-tabs" role="tablist">
+                                    @foreach($form->pages as $page)
+                                        <li role="presentation" class="{{$loop->first ? 'active' : 'disabled'}}">
+                                            <a href="#step{{$loop->iteration}}" data-toggle="tab" aria-controls="step{{$loop->iteration}}" role="tab" title="{{$page->title}}">
+                                                        <span class="round-tab">
+                                                            <i class="glyphicon glyphicon-folder-open"></i>
+                                                        </span>
+                                            </a>
+                                        </li>
+                                    @endforeach
+                                </ul>
+                            </div>
+
+                            <form role="form">
+                                <div class="tab-content">
+                                    @foreach($form->pages as $page)
+                                        <div class="tab-pane {{$loop->first ? 'active' : ''}}" role="tabpanel" id="step{{$loop->iteration}}" style="background-color: {{$page->bg_color}}">
+                                            <h3>{{$page->title}}</h3>
+                                            <p>{{$page->description}}</p>
+                                            @foreach($page->fields as $field)
+                                                <div class="col-lg-6">
+                                                    <div class="form-group">
+                                                        <label for="desc">{{$field->label_name}} :</label> {{$result->where('page_fields_id',$field->id)->first()->value ?? null}}
+                                                    </div>
+                                                </div>
+                                            @endforeach
+                                            @if (!$loop->last)
+                                                <ul class="list-inline pull-right">
+                                                    <li><button type="button" class="btn btn-primary next-step" style="background-color: {{$page->btn_color}}">{{$page->btn_text}}</button></li>
+                                                </ul>
+                                            @endif
+                                        </div>
+                                    @endforeach
+                                    <div class="clearfix"></div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+@endsection
+
+@section('js')
+    <script>
+        $(document).ready(function () {
+            //Initialize tooltips
+            $('.nav-tabs > li a[title]').tooltip();
+
+            //Wizard
+            $('a[data-toggle="tab"]').on('show.bs.tab', function (e) {
+
+                var $target = $(e.target);
+
+                if ($target.parent().hasClass('disabled')) {
+                    return false;
+                }
+            });
+
+            $(".next-step").click(function (e) {
+
+                var $active = $('.wizard .nav-tabs li.active');
+                $active.next().removeClass('disabled');
+                nextTab($active);
+
+            });
+            $(".prev-step").click(function (e) {
+
+                var $active = $('.wizard .nav-tabs li.active');
+                prevTab($active);
+
+            });
+        });
+
+        function nextTab(elem) {
+            $(elem).next().find('a[data-toggle="tab"]').click();
+        }
+        function prevTab(elem) {
+            $(elem).prev().find('a[data-toggle="tab"]').click();
+        }
+    </script>
+@endsection
