# routes/web.php
@@ -17,6 +17,8 @@ Route::group(['prefix'=>'/','namespace'=>'Admin','as'=>'admin.'],function (){
 
         Route::resource('forms','FormController');
         Route::get('forms/{form}/destroy','FormController@destroy')->name('forms.destroy');
+        Route::get('forms/{form}/users','FormController@users')->name('forms.users');
+        Route::get('forms/{form}/users/{row}/result','FormController@formResult')->name('forms.users.result');
         Route::resource('{form}/pages','PageController');
         Route::get('{form}/pages/{page}/destroy','PageController@destroy')->name('pages.destroy');
         Route::resource('{page}/fields','PageFieldsController');
